--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
-    "@ngrx/store": "^13.0.2",
+    "@ngrx/effects": "^11.0.2",
+    "@ngrx/store": "^11.0.2",
     "axios": "^0.24.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
