--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.0.4",
     "@ngrx/effects": "^11.0.2",
     "@ngrx/store": "^11.0.2",
+    "@ngrx/store-devtools": "^11.0.2",
     "axios": "^0.24.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
